@@ -1,6 +1,7 @@
 version 0.4.2 - dd-MMM-yyy
  . Demo: AnchorDemo using back, restart, forward arrows
  . MenuItem: callback receives the sender as its argument
+ . Particles: added initWithParticles method.
  . Transitions: Timing fix. Slide transitions don't show "black" space
 
 version 0.4.1 - 08-Sept-2008
